--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "fast-async",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "dependencies": {
-    "babel-core": "^5.6.0",
-    "nodent": "^2.1.11"
+    "babel-core": "5.8.33",
+    "nodent": "^2.2.0"
   },
   "description": "fast-async/await transformer Babel plugin",
   "main": "plugin.js",
