--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "fast-async",
-  "version": "6.0.7",
+  "version": "6.0.8",
   "dependencies": {
-    "nodent": "^2.3.1"
+    "nodent": ">=2.3.2"
   },
   "description": "fast-async/await transformer Babel plugin",
   "main": "plugin.js",
