--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "fast-async",
-  "version": "6.0.9",
+  "version": "6.0.10",
   "dependencies": {
-    "nodent": ">=2.3.3"
+    "nodent": "^2.3.4"
   },
   "description": "fast-async/await transformer Babel plugin",
   "main": "plugin.js",
