--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "fast-async",
-  "version": "6.0.32",
+  "version": "6.0.33",
   "dependencies": {
-    "nodent": "^2.6.3"
+    "nodent": ">=2.6.9"
   },
   "description": "fast-async/await transformer Babel plugin",
   "main": "plugin.js",
