Add a (basic) test to ensure 'babel-cli' can actually compile and produce output with the plugin Bump version Use babel to compiler the runtime, not acorn, as babel's AST is not ESTree compliant

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "fast-async/await transformer Babel plugin",
   "main": "plugin.js",
   "scripts": {
-    "test": "cd tests && npm i && node --expose-gc ."
+    "test": "cd tests && npm i && npm test"
   },
   "repository": {
     "type": "git",
