--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "fast-async",
   "version": "6.3.0",
   "dependencies": {
-    "nodent-compiler": ">=3.1.0",
-    "nodent-runtime": ">=3.0.4"
+    "@babel/helper-module-imports": "^7.0.0-beta.39",
+    "nodent-compiler": ">=3.1.7",
+    "nodent-runtime": ">=3.2.0"
   },
   "description": "fast-async/await transformer Babel plugin",
   "main": "plugin.js",
