--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "fast-async",
-  "version": "7.0.1",
+  "version": "7.0.2",
   "dependencies": {
-    "@babel/helper-module-imports": "^7.0.0-beta.39",
-    "nodent-compiler": ">=3.1.8",
-    "nodent-runtime": ">=3.2.1"
+    "@babel/generator": "^7.0.0-beta.44",
+    "@babel/helper-module-imports": "^7.0.0-beta.44",
+    "babylon": "^6.18.0",
+    "nodent-runtime": ">=3.2.1",
+    "nodent-transform": ">=3.2.0"
   },
   "description": "fast-async/await transformer Babel plugin",
   "main": "plugin.js",
