--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "fast-async",
-  "version": "7.0.2",
+  "version": "7.0.3",
   "dependencies": {
     "@babel/generator": "^7.0.0-beta.44",
     "@babel/helper-module-imports": "^7.0.0-beta.44",
-    "babylon": "^6.18.0",
+    "babylon": "^7.0.0-beta.44",
     "nodent-runtime": ">=3.2.1",
     "nodent-transform": ">=3.2.0"
   },
