--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "fast-async",
-  "version": "7.0.4",
+  "version": "7.0.5",
   "dependencies": {
     "@babel/generator": "^7.0.0-beta.44",
     "@babel/helper-module-imports": "^7.0.0-beta.44",
     "babylon": "^7.0.0-beta.44",
-    "nodent-runtime": ">=3.2.1",
-    "nodent-transform": ">=3.2.0"
+    "nodent-runtime": "^3.2.1",
+    "nodent-transform": "^3.2.2"
   },
   "description": "fast-async/await transformer Babel plugin",
   "main": "plugin.js",
